--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>碎銀金主貸</title>
+    <meta name="twitter:description" content="專營金主相關金流|小額信貸|不動產融資|證券商支撐">
     <meta name="twitter:title" content="碎銀金主貸">
     <meta name="twitter:image" content="assets/img/1369913.jpg">
     <meta property="og:image" content="assets/img/1369913.jpg">
+    <meta name="description" content="專營金主相關金流|小額信貸|不動產融資|證券商支撐">
     <link rel="icon" type="image/jpeg" sizes="1280x1280" href="assets/img/1369913.jpg">
     <link rel="icon" type="image/jpeg" sizes="1280x1280" href="assets/img/1369913.jpg" media="(prefers-color-scheme: dark)">
     <link rel="icon" type="image/jpeg" sizes="1280x1280" href="assets/img/1369913.jpg">
@@ -23,7 +25,7 @@
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
     <nav class="navbar navbar-expand-lg fixed-top bg-dark navbar-dark" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#page-top">碎銀金主貸</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="https://pking.asia">碎銀金主貸</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto text-uppercase">
                     <li class="nav-item"><a class="nav-link" href="#services">相關服務</a></li>
@@ -38,7 +40,7 @@
     <header class="text-center border rounded d-md-flex justify-content-md-center align-items-md-center masthead" style="background: url(&quot;assets/img/58pic_52d67e95f2908.png&quot;) round;">
         <div class="container">
             <div class="border rounded intro-text">
-                <div class="intro-lead-in"><span>九成過件率期間：即日起至2024/12/22</span></div>
+                <div class="intro-lead-in"><span>九成過件率</span></div>
                 <div class="intro-heading text-uppercase"><span>小額貸&amp;房貸</span></div>
             </div>
         </div>
@@ -61,8 +63,8 @@
                     <p class="text-start text-muted">經配對後，最高金額無上限，遲繳不影響信用評等，可再向銀行融資，寬限期佳</p>
                 </div>
                 <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-barcode fa-stack-1x fa-inverse"></i></span>
-                    <h4 class="section-heading">配合分潤</h4>
-                    <p class="text-start text-muted">1、已撥款客戶推薦案件，不限額度撥款即送五仟元禮券。<br>2、長期配合者，另有現金佣金，免課稅及免開立發票。</p>
+                    <h4 class="section-heading">證券商支撐</h4>
+                    <p class="text-center text-muted">千萬業績支持</p>
                 </div>
             </div>
         </div>
@@ -101,9 +103,9 @@
                         </div><img class="img-fluid" src="assets/img/portfolio/a3.png">
                     </a>
                     <div class="portfolio-caption">
-                        <h4 style="background: var(--bs-body-bg);">聯絡及相關說明</h4>
+                        <h4 style="background: var(--bs-body-bg);">證券商支撐</h4>
                         <h4></h4>
-                        <p class="text-muted" style="background: var(--bs-body-bg);">轉介紹可洽詢</p>
+                        <p class="text-muted" style="background: var(--bs-body-bg);">資金充裕設單點上限</p>
                     </div>
                 </div>
             </div>
@@ -174,11 +176,11 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <div class="modal-body">
-                                <h2 class="text-uppercase">配合與相關諮詢</h2>
-                                <p class="text-muted item-intro">如欲配合，請來信留下Line ID洽談</p>
-                                <p class="text-start">★介紹：<br>我們是做金主小額貸及金主房貸，可承做警示戶及承作多查戶，我們可以配合看看，如果你們有可以送金主的客戶，可以轉送讓我們處理看看，相信你們也有金主但是畢竟，每家持有的金主數量及對象都不同。可以多方試試，有金額比較重要。<br><br>★配合資格：<br>a.為本機構申請過之申請人，可推薦另申請人，賺取佣金。<br>b.另與我方洽詢配合之相關人員。<br><br>★進件方式：<br>線上填寫客戶姓名+客戶聯絡電話+打去要說是誰的案件+收案件人的電話，我們行政會打給客戶詢問資訊，及協助收資料。<br><br>★相關費用：<br>小額不代收服務費，對保費三千五~一萬五不等，多查及警示戶可承作但無佣。<br>房貸以服務費拆分，對保費三千五~一萬五不等，多查及警示戶可承作但無佣。<br><br>★佣金：<br>1、已撥款客戶推薦案件，不限額度撥款即送五仟禮券。<br>2、長期配合者，另有現金佣金，免課稅及免開立發票。</p>
+                                <h2 class="text-uppercase">證券商支撐</h2>
+                                <p class="text-muted item-intro">配額可於帳戶中即時使用</p>
+                                <p class="text-start">請提供相關方案，並提供相關聯絡方式，經評估後方可長期配合，須說明明確標的物方案，並提供雙方合作條件。</p>
                                 <ul class="list-unstyled">
-                                    <li><a href="https://drive.google.com/file/d/1jIcuhAJ3IHD1R03SWGvPk8HQl38jAvi2/view?usp=drive_link">紙本申請書下載</a></li>
+                                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSexcTpHgGA6acPqOBwgSdnmotaXRTfQlmQOCmngOKKtl1SP7w/viewform">相關配合提案及項目</a></li>
                                     <li><a href="https://line.me/ti/p/ChpH7ew5hg">Line</a><a href="#"></a></li>
                                     <li>Mail：pking.asia@gmail.com</li>
                                 </ul><button class="btn btn-primary" type="button" data-bs-dismiss="modal"><i class="fa fa-times"></i><span>&nbsp;上一頁</span></button>
